--- a/my-app/src/Cmponenet/style.css
+++ b/my-app/src/Cmponenet/style.css
@@ -1,5 +1,4 @@
 
-
 * {
       margin: 0;
       padding: 0;
@@ -77,7 +76,7 @@ span{
     color: var(--main-color);  
 }
 .home-content h1{
-      font-size: 5rem;
+      font-size: 3rem;
       font-weight: 700;
       line-height: 1.3;
 }
@@ -148,7 +147,7 @@ about-img img{
 }
 .heading{
       text-align: center;
-      font-size: 4.5rem;
+      font-size: 3.5rem;
 
 }
 .about-content h2{
@@ -197,7 +196,8 @@ service-box i{
 
 }
 service-box h3{
-      font-size: 2.6rem;
+      font-size: 3.6rem;
+      color: #3c95e8;
 }
 service-box p{
       font-size: 1.6rem;
@@ -333,6 +333,9 @@ transform: scale(1.1);
       background: var(--main-color);
       border-radius: .8rem;
       transition: .5s ease;
+      margin-left: 95%;
+      right: 2rem; /* Distance from the right edge */
+      bottom: 2rem;
 }
 .footer-icontop:hover{
       box-shadow: 0 0 1rem var(--main-color) ;
